@@ -40,11 +40,18 @@ sourceSets {
 
 dependencies {
     implementation(project(":saros.core"))
-
+	implementation(project(":saros.core", configuration = "releaseDep"))
+	
     // workaround for "signer information does not match signer information
     // of other classes in the same package" when using older versions like 3.16.300
-    implementation("org.eclipse.platform:org.eclipse.jface.text:3.20.100")
+    implementation("org.eclipse.platform:org.eclipse.jface.text:3.25.100")
+	implementation("org.eclipse.platform:org.eclipse.core.resources:3.17.0"){
+		version {
+			strictly("3.17.0")
+		}
+	}
 
+    
     testImplementation(project(path = ":saros.core", configuration = "testing"))
 }
 
@@ -213,3 +220,11 @@ tasks {
         }
     }
 }
+tasks.withType<JavaExec> {
+    jvmArgs("--add-opens", "java.base/java.nio.charset=ALL-UNNAMED")
+}
+
+tasks.withType<Test> {
+    jvmArgs("--add-opens", "java.base/java.nio.charset=ALL-UNNAMED")
+}
+
